added index file

--- a/index.html
+++ b/index.html
@@ -221,20 +221,8 @@
 
             <!-- GitHub Pages need the `.` to indicate the current directory. -->
             <!-- https://www.elharony.com/images-not-displaying-in-github-pages/ -->
-            <div class="keyboard-layout" data-layout="colemak">
-                <img src="./assets/img/colemak.png" alt="colemak.png">
-            </div>
-            <div class="keyboard-layout" data-layout="colemak-dh">
-                <img src="./assets/img/colemak-dh.png" alt="colemak-dh.png">
-            </div>
-            <div class="keyboard-layout" data-layout="colemak-dhk">
-                <img src="./assets/img/colemak-dhk.png" alt="colemak-dhk.png">
-            </div>
-            <div class="keyboard-layout" data-layout="colemak-dh-matrix">
-                <img src="./assets/img/colemak-dh-matrix.png" alt="colemak-dh-matrix.png">
-            </div>
-            <div class="keyboard-layout" data-layout="colemak-dhk-matrix">
-                <img src="./assets/img/colemak-dhk-matrix.png" alt="colemak-dhk-matrix.png">
+            <div class="keyboard-layout" data-layout="hebrew">
+                <img src="./assets/img/Hebrew_Keyboard.jpg" alt="Hebrew_Keyboard.jpg">
             </div>
             <div class="keyboard-layout" data-layout="qwerty">
                 <img src="./assets/img/qwerty.png" alt="qwerty.png">
@@ -246,7 +234,7 @@
             </div>
 
             <div id='title'>
-                <a href="https://github.com/ranelpadon/keyzen-colemak-dh">Keyzen-Colemak-DH</a>
+                <a href="https://github.com/hebrewtyping/typing">Keyzen-Hebrew</a>
             </div>
 
             <div id='rigor'>
